Change class base service to functional export
